refactor token in registration staff and change password endpoints (remove jwt)
